fix: page toolbar clipping fixed on mobile

--- a/src/styles/atomics.sass
+++ b/src/styles/atomics.sass
@@ -77,6 +77,10 @@
 
 // *** Visual helpers *************************************************
 
+.clipWithEllipsis
+  overflow: hidden
+  text-overflow: ellipsis
+
 // Actions and buttons that can be "active" and need hover on focus
 .chromaFocus
   transition: background 0.6s
